--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,13 +10,17 @@ RUN apt-get update && apt-get install -y \
 
 RUN docker-php-ext-install pdo pdo_pgsql zip
 
+# Instalar e habilitar redis
+RUN pecl install redis && docker-php-ext-enable redis
+
 # Composer
 COPY --from=composer:2.7 /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www
 
-# Instale dependências do Laravel
 COPY . /var/www
+
+RUN docker-php-ext-install pcntl
 
 RUN composer install
 
