--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,7 +7,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^11.31",
+        "laravel/horizon": "^5.32",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
