--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.11.0",
     "nuxt": "^3.17.3",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   }
